--- a/src/assets/styles/mainWindow.css
+++ b/src/assets/styles/mainWindow.css
@@ -1,11 +1,14 @@
-.mainWindow{
-    height:100vh;
-    background: linear-gradient(179.98deg, #000000 0.01%, #212031 99.99%);
-
+/* mainWindow.css */
+.mainWindow {
+    height: 100vh; 
+    display: flex; 
+    justify-content: center; 
 }
-.mainWindow_container{
-    max-width: 393px;
-    margin:0 auto;
-    padding:0 16px;
-    color: #fff
+
+.mainWindow_container {
+    max-width: 393px; 
+    width: 100%; 
+    margin: 0 auto; 
+    padding: 0 16px; 
+    color: #fff; 
 }
