--- a/src/assets/styles/NeuroAudio.css
+++ b/src/assets/styles/NeuroAudio.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    align-items: center;
 }
 
 .dropdown-block {
@@ -62,8 +63,8 @@
     z-index: 0;
 }
 
-.pay-button {
-    width: 141px;
+.PayButton {
+    width: 145px;
     height: 30px;
     border-radius: 25px;
     margin-top: 10px;
